[gd_scene load_steps=11 format=3 uid="uid://cbusotfkoowit"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_v6yss"]
[ext_resource type="Script" path="res://Scripts/Components/healthComponent.gd" id="2_w40h2"]
[ext_resource type="Script" path="res://Scripts/Components/hitboxComponent.gd" id="3_q53oh"]
[ext_resource type="PackedScene" uid="uid://2e5bdli817yl" path="res://Assets/hand_gun.tscn" id="4_w5nb4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8cmhr"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8d0cg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ldk84"]
albedo_color = Color(0.678431, 0.27451, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7ppiv"]
size = Vector3(0.255, 0.165, 0.565)

[sub_resource type="BoxMesh" id="BoxMesh_nc0n1"]
size = Vector3(0.255, 0.71, 0.565)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jnloq"]

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_v6yss")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_8cmhr")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_8d0cg")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerMesh"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0346686, 0.454897, -0.422584)
material_override = SubResource("StandardMaterial3D_ldk84")
mesh = SubResource("BoxMesh_7ppiv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="PlayerMesh"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.000308573, 0.13966, 0.581502)
mesh = SubResource("BoxMesh_nc0n1")

[node name="WeaponPosition" type="Marker3D" parent="PlayerMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.658892, 0, 0)

[node name="HandGun" parent="PlayerMesh/WeaponPosition" instance=ExtResource("4_w5nb4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.230446)

[node name="HitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("3_q53oh")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape3D_jnloq")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_w40h2")
